# SheetManagerServer

./: .gitignore  CMakeLists.txt  README.md  USAGE.md  WINDOWS_BUILD.md  build.sh  minimal_test.py  raw_test.py  test_download.bat  test_download.py
include/: file_manager.h  http_handler.h  performance_config.h  server.h
src/: file_manager.cpp  http_handler.cpp  main.cpp  server.cpp  server_simple.cpp
